# libvmod-types

./: Makefile.am  README.rst  configure.ac  vmod-types.spec
debian/: changelog  control  copyright  dirs
src/: Makefile.am  vmod_types.vcc  vmod_types_integer.c  vmod_types_string.c
src/tests/: test01.vtc  test02.vtc
